--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Comfortaa');
+
 body,#root{
   background: linear-gradient(to right, rgba(169,3,41,1) 0%, rgba(23,82,107,1) 100%);
   height: 100%;
+}
+
+h1{
+  font-family:'Comfortaa' !important;
 }
 
  #app, #map {
